<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.palmergames.bukkit.towny</groupId>
    <artifactId>towny-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>

    <!-- For use with GitHub Package Registry -->
    <!-- Requires repo write access, and proper local maven configuration -->
    <!-- https://help.github.com/en/articles/about-github-package-registry -->
    <distributionManagement>
        <!-- This only needs to be un-commented for Release versions, when we want to upload to the cursed Github packages.
        <repository>
            <id>github</id>
            <name>GitHub TownyAdvanced Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/TownyAdvanced/Towny</url>
        </repository>-->
        <repository>
            <id>nexus</id>
            <name>Towny</name>
            <url>https://repo.glaremasters.me/repository/towny/</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>Towny</module>
        <module>providers/BaseProviders</module>
        <module>providers/FoliaProvider</module>
        <module>providers/PaperProvider</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>26.0.2</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
